# BecomeTheHomeworkBot

./: README.md
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
server/: llm.py  main.py  pyproject.toml
